Fix sidebar scrolling - add max-height and overflow for long category lists

--- a/css/blog.css
+++ b/css/blog.css
@@ -23,6 +23,8 @@
     position: sticky;
     top: 100px;
     height: fit-content;
+    max-height: calc(100vh - 120px);
+    overflow-y: auto;
 }
 
 .sidebar-widget {
